iptables/target.testing.iptables.test.rules
*filter

# For a performance test target

# based on http://wiki.debian.org/iptables#line-47

#  Allows all loopback (lo0) traffic and drop all traffic to 127/8 that doesn't use lo0
-A INPUT -i lo -j ACCEPT
-A INPUT -i lo -d 127.0.0.0/8 -j REJECT

#  Accepts all established inbound connections
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

#  Allows all outbound traffic
#  You can modify this to only allow certain traffic
-A OUTPUT -j ACCEPT

# Allows HTTP and HTTPS connections from agent and observer
-A INPUT -p tcp -s [AGENT_IP_ADDRESS] --dport http -j ACCEPT
-A INPUT -p tcp -s [OBSERVER_IP_ADDRESS] --dport http -j ACCEPT
	
-A INPUT -p tcp -s [AGENT_IP_ADDRESS] --dport https -j ACCEPT
-A INPUT -p tcp -s [OBSERVER_IP_ADDRESS] --dport https -j ACCEPT

# Allows SSH connections on default port
-A INPUT -p tcp -s [OBSERVER_IP_ADDRESS] --dport ssh -j ACCEPT

# Allow ping
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT

# log iptables denied calls
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7

# Reject all other inbound - default deny unless explicitly allowed policy
-A INPUT -j REJECT
-A FORWARD -j REJECT

COMMIT
